Completed environment setup.

--- a/resources/styles/style.scss
+++ b/resources/styles/style.scss
@@ -1,12 +1,6 @@
+@import "components/normalize";
+@import "components/base";
+@import "components/typography";
 @import "components/header";
 @import "components/footer";
 
-body    {
-    background: red;
-}
-
-//Make the partial
-//Save the partial
-//Delete the partial
-//Import the partial
-//Save style.scss
