All images added and HTML complete.

--- a/resources/styles/components/_typography.scss
+++ b/resources/styles/components/_typography.scss
@@ -4,6 +4,30 @@ body    {
     font-family: $font-stack;
 }
 
+h1  {
+
+}
+
+h2  {
+
+}
+
+h3  {
+
+}
+
+h4  {
+
+}
+
+h5  {
+
+}
+
+a   {
+    text-decoration: none;
+}
+
 .italic {
     font-style: italic;
 }
