--- a/resources/styles/components/_typography.scss
+++ b/resources/styles/components/_typography.scss
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "PressStyle";
+  src:  url(../fonts/PressStyle.woff) format('woff');
+}
+
 body    {
     color: $primary;
     font-size: 16px;
@@ -5,23 +10,25 @@ body    {
 }
 
 h1  {
-
+    font-size: 60px;
+    text-align: center;
 }
 
 h2  {
-
+    font-size: 32px;
+    text-align: center;
 }
 
 h3  {
-
+    font-size: 24px;
 }
 
 h4  {
-
+    font-size: 18px;
 }
 
 h5  {
-
+    font-size: 16px;
 }
 
 a   {
@@ -37,5 +44,14 @@ a   {
 }
 
 .font__pressstyle   {
-    /* Will need to download link the font for this */
+    font-family: "PressStyle";
+}
+
+header a    {
+    color: $primary;
+    font-size: 14px;
+}
+
+header a:hover  {
+    color: $secondary;
 }
