--- a/resources/styles/components/_typography.scss
+++ b/resources/styles/components/_typography.scss
@@ -24,16 +24,19 @@ h2  {
 
 h3  {
     font-size: 24px;
+    text-align: center;
     font-weight: $bold-weight-bold;
 }
 
 h4  {
     font-size: 18px;
+    text-align: center;
     font-weight: $bold-weight-bold;
 }
 
 h5  {
     font-size: 16px;
+    text-align: center;
     font-weight: $bold-weight-bold;
 }
 
@@ -44,6 +47,7 @@ a   {
 
 p   {
     font-size: 14px;
+    text-align: center;
 }
 
 .italic {
@@ -81,4 +85,8 @@ header a:hover  {
 
 .welcome__author span:last-of-type   {
     color: $secondary;
+}
+
+.regprice   {
+    text-decoration: line-through;
 }
