Complete CSS for signup section.

--- a/resources/styles/components/_typography.scss
+++ b/resources/styles/components/_typography.scss
@@ -96,3 +96,8 @@ header a:hover  {
 .popular__prodpricing p   {
     font-weight: 400;
 }
+
+.signup form p  {
+    color: $secondary;
+    font-size: 14px;
+}
