--- a/resources/styles/style.scss
+++ b/resources/styles/style.scss
@@ -469,6 +469,10 @@ header .fa     {
     margin: 60px 0px 0px 0px;
 }
 
+.blog .popular__titleunderlinesdiv    {
+    padding-top: 25px;
+}
+
 .blog__articlebox   {
     width: 30%;
 }
@@ -499,6 +503,61 @@ header .fa     {
     border-bottom: 1px solid $primary;
 }
 
+// This is where styling begins for the sign up section
+
+.signup .wrapper  {
+    align-items: center;
+    flex-direction: column;
+}
+
+.signup h2  {
+    margin: 70px 0px 0px 0px;
+}
+
+.signup .popular__titleunderlinesdiv    {
+    margin: 0;
+    padding-top: 25px;
+}
+
+.signup p   {
+    width: 52%;
+}
+
+.signup__emailbox   {
+    border-bottom: 1px solid $secondary;
+    width: 80%;
+}
+
+.signup form    {
+    display: flex;
+}
+
+.signup form p  {
+    width: 23%;
+}
+
+.signup input   {
+    border: none;
+    width: 70%;
+}
+
+.signup button  {
+    background: none;
+    border: none;
+    padding: 0;
+    width: 7%;
+}
+
+.signup__locationimgscont   {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 40px;
+    width: 100%;
+}
+
+.signup__locationimgscont img   {
+    width: 100%;
+}
 
 // This is where responsive styling starts
 
