--- a/resources/styles/style.scss
+++ b/resources/styles/style.scss
@@ -15,7 +15,8 @@ header,
 .popular,
 .blog,
 .signup,
-.contact {
+.contact,
+footer {
     display: flex;
 }
 
@@ -681,6 +682,20 @@ header .fa     {
     padding-top: 10px;
 }
 
+// This is where footer styling begins
+
+footer  {
+    justify-content: center;
+    margin-bottom: 40px;
+}
+
+footer .wrapper {
+    justify-content: space-between
+}
+
+footer .footer__dark   {
+    color: $primary;
+}
 
 
 
